Login and Register API merged with frontend. Fixed all the bugs and alignments of sidebar in the frontend. Added toastify for user friendly alerts. Fixed header and footer. Patient dashboard UI : Done

--- a/Ayurhit_Frontend/src/styles/sidebar.css
+++ b/Ayurhit_Frontend/src/styles/sidebar.css
@@ -1,8 +1,10 @@
 .menu-button {
-    margin-top: 11rem;
+    position: fixed;
+    z-index: 2;
 }
 
-.custom-canvas {
+.offcanvas {
+    position: fixed;
     margin-top: 10.75rem;
 }
 
@@ -23,7 +25,7 @@
     color: #fff;
 }
 
-.btn-custom:focus{
+.btn-custom:focus {
     background-color: #0056b3;
     border-color: #0056b3;
 }
